[package]
name = "dns_packet_reader"
version = "0.1.0"
edition = "2021"
description = "Tiny tool for printing contents of DNS packets from their hex dump."
authors = ["Linus Kirkwood <linuskirkwood@gmail.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
hex = "0.4.3"
simple-dns = "0.9.1"
